// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`CollectionHeader rendering tests description null - test 1`] = `
<div>
  <div
    class="flex justify-between gap-4"
    data-testid="collection-header"
  >
    <div>
      <nav
        aria-label="breadcrumb"
        data-slot="breadcrumb"
        data-testid="collection-breadcrumb"
      >
        <ol
          class="flex flex-wrap items-center gap-1.5 text-sm break-words text-muted-foreground sm:gap-2.5"
          data-slot="breadcrumb-list"
        >
          <li
            class="inline-flex items-center gap-1.5"
            data-slot="breadcrumb-item"
          >
            <a
              class="transition-colors hover:text-foreground"
              data-slot="breadcrumb-link"
              data-testid="root-link"
              href="/collections"
            >
              Sammlungen
            </a>
          </li>
          <li
            aria-hidden="true"
            class="[&>svg]:size-3.5"
            data-slot="breadcrumb-separator"
            role="presentation"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-chevron-right"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="m9 18 6-6-6-6"
              />
            </svg>
          </li>
          <li
            class="inline-flex items-center gap-1.5"
            data-slot="breadcrumb-item"
          >
            <span
              aria-current="page"
              aria-disabled="true"
              class="font-normal text-foreground max-w-40 truncate"
              data-slot="breadcrumb-page"
              role="link"
              title="name 1"
            >
              name 1
            </span>
          </li>
        </ol>
      </nav>
      <div
        class="mt-3 min-w-0"
        data-testid="overview"
      >
        <div
          class="flex items-center gap-2"
        >
          <h1
            class="truncate text-2xl font-bold text-slate-900"
          >
            name 1
          </h1>
        </div>
      </div>
    </div>
    <div
      class="flex shrink-0 items-center gap-2"
      data-testid="actions"
    >
      <a
        class="inline-flex items-center justify-center whitespace-nowrap text-sm font-medium transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive bg-primary text-primary-foreground hover:bg-primary/90 h-8 rounded-md px-3 has-[>svg]:px-2.5 cursor-pointer gap-2"
        data-slot="button"
        data-testid="create-template-btn"
        href="/templates/new"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-plus h-4 w-4"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M5 12h14"
          />
          <path
            d="M12 5v14"
          />
        </svg>
        Neue Vorlage
      </a>
      <div
        data-slot="dropdown-menu"
        data-testid="more-options-btn"
      >
        <button
          class="inline-flex items-center justify-center gap-2 whitespace-nowrap rounded-md text-sm font-medium transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive border bg-background shadow-xs hover:bg-accent hover:text-accent-foreground dark:bg-input/30 dark:border-input dark:hover:bg-input/50 size-8 cursor-pointer"
          data-slot="dropdown-menu-trigger"
          data-testid="more-options-trigger-btn"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-ellipsis-vertical h-4 w-4"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <circle
              cx="12"
              cy="12"
              r="1"
            />
            <circle
              cx="12"
              cy="5"
              r="1"
            />
            <circle
              cx="12"
              cy="19"
              r="1"
            />
          </svg>
        </button>
        <div
          data-testid="mock-react-dropdown-menu-portal"
        />
      </div>
    </div>
  </div>
  <div
    data-slot="alert-dialog"
    data-testid="mock-react-alert-dialog-root"
  >
    <div
      data-slot="alert-dialog-portal"
      data-testid="mock-react-alert-dialog-portal"
    >
      <div
        class="data-[state=open]:animate-in data-[state=closed]:animate-out data-[state=closed]:fade-out-0 data-[state=open]:fade-in-0 fixed inset-0 z-50 bg-black/50"
        data-slot="alert-dialog-overlay"
        data-testid="mock-react-alert-dialog-overlay"
      />
    </div>
  </div>
</div>
`;

exports[`CollectionHeader rendering tests isPublic false - badge hidden - test 1`] = `
<div>
  <div
    class="flex justify-between gap-4"
    data-testid="collection-header"
  >
    <div>
      <nav
        aria-label="breadcrumb"
        data-slot="breadcrumb"
        data-testid="collection-breadcrumb"
      >
        <ol
          class="flex flex-wrap items-center gap-1.5 text-sm break-words text-muted-foreground sm:gap-2.5"
          data-slot="breadcrumb-list"
        >
          <li
            class="inline-flex items-center gap-1.5"
            data-slot="breadcrumb-item"
          >
            <a
              class="transition-colors hover:text-foreground"
              data-slot="breadcrumb-link"
              data-testid="root-link"
              href="/collections"
            >
              Sammlungen
            </a>
          </li>
          <li
            aria-hidden="true"
            class="[&>svg]:size-3.5"
            data-slot="breadcrumb-separator"
            role="presentation"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-chevron-right"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="m9 18 6-6-6-6"
              />
            </svg>
          </li>
          <li
            class="inline-flex items-center gap-1.5"
            data-slot="breadcrumb-item"
          >
            <span
              aria-current="page"
              aria-disabled="true"
              class="font-normal text-foreground max-w-40 truncate"
              data-slot="breadcrumb-page"
              role="link"
              title="name 1"
            >
              name 1
            </span>
          </li>
        </ol>
      </nav>
      <div
        class="mt-3 min-w-0"
        data-testid="overview"
      >
        <div
          class="flex items-center gap-2"
        >
          <h1
            class="truncate text-2xl font-bold text-slate-900"
          >
            name 1
          </h1>
        </div>
        <p
          class="mt-1 text-sm text-slate-600"
        >
          description 1
        </p>
      </div>
    </div>
    <div
      class="flex shrink-0 items-center gap-2"
      data-testid="actions"
    >
      <a
        class="inline-flex items-center justify-center whitespace-nowrap text-sm font-medium transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive bg-primary text-primary-foreground hover:bg-primary/90 h-8 rounded-md px-3 has-[>svg]:px-2.5 cursor-pointer gap-2"
        data-slot="button"
        data-testid="create-template-btn"
        href="/templates/new"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-plus h-4 w-4"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M5 12h14"
          />
          <path
            d="M12 5v14"
          />
        </svg>
        Neue Vorlage
      </a>
      <div
        data-slot="dropdown-menu"
        data-testid="more-options-btn"
      >
        <button
          class="inline-flex items-center justify-center gap-2 whitespace-nowrap rounded-md text-sm font-medium transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive border bg-background shadow-xs hover:bg-accent hover:text-accent-foreground dark:bg-input/30 dark:border-input dark:hover:bg-input/50 size-8 cursor-pointer"
          data-slot="dropdown-menu-trigger"
          data-testid="more-options-trigger-btn"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-ellipsis-vertical h-4 w-4"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <circle
              cx="12"
              cy="12"
              r="1"
            />
            <circle
              cx="12"
              cy="5"
              r="1"
            />
            <circle
              cx="12"
              cy="19"
              r="1"
            />
          </svg>
        </button>
        <div
          data-testid="mock-react-dropdown-menu-portal"
        />
      </div>
    </div>
  </div>
  <div
    data-slot="alert-dialog"
    data-testid="mock-react-alert-dialog-root"
  >
    <div
      data-slot="alert-dialog-portal"
      data-testid="mock-react-alert-dialog-portal"
    >
      <div
        class="data-[state=open]:animate-in data-[state=closed]:animate-out data-[state=closed]:fade-out-0 data-[state=open]:fade-in-0 fixed inset-0 z-50 bg-black/50"
        data-slot="alert-dialog-overlay"
        data-testid="mock-react-alert-dialog-overlay"
      />
    </div>
  </div>
</div>
`;

exports[`CollectionHeader rendering tests isPublic true - badge shown - test 1`] = `
<div>
  <div
    class="flex justify-between gap-4"
    data-testid="collection-header"
  >
    <div>
      <nav
        aria-label="breadcrumb"
        data-slot="breadcrumb"
        data-testid="collection-breadcrumb"
      >
        <ol
          class="flex flex-wrap items-center gap-1.5 text-sm break-words text-muted-foreground sm:gap-2.5"
          data-slot="breadcrumb-list"
        >
          <li
            class="inline-flex items-center gap-1.5"
            data-slot="breadcrumb-item"
          >
            <a
              class="transition-colors hover:text-foreground"
              data-slot="breadcrumb-link"
              data-testid="root-link"
              href="/collections"
            >
              Sammlungen
            </a>
          </li>
          <li
            aria-hidden="true"
            class="[&>svg]:size-3.5"
            data-slot="breadcrumb-separator"
            role="presentation"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-chevron-right"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="m9 18 6-6-6-6"
              />
            </svg>
          </li>
          <li
            class="inline-flex items-center gap-1.5"
            data-slot="breadcrumb-item"
          >
            <span
              aria-current="page"
              aria-disabled="true"
              class="font-normal text-foreground max-w-40 truncate"
              data-slot="breadcrumb-page"
              role="link"
              title="name 1"
            >
              name 1
            </span>
          </li>
        </ol>
      </nav>
      <div
        class="mt-3 min-w-0"
        data-testid="overview"
      >
        <div
          class="flex items-center gap-2"
        >
          <h1
            class="truncate text-2xl font-bold text-slate-900"
          >
            name 1
          </h1>
          <span
            class="inline-flex items-center justify-center rounded-full border px-2 py-0.5 text-xs font-medium w-fit whitespace-nowrap shrink-0 [&>svg]:size-3 [&>svg]:pointer-events-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive transition-[color,box-shadow] overflow-hidden [a&]:hover:bg-accent [a&]:hover:text-accent-foreground gap-1 border-green-300 bg-green-50 text-green-700"
            data-slot="badge"
            data-testid="public-badge"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-globe h-3 w-3"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <circle
                cx="12"
                cy="12"
                r="10"
              />
              <path
                d="M12 2a14.5 14.5 0 0 0 0 20 14.5 14.5 0 0 0 0-20"
              />
              <path
                d="M2 12h20"
              />
            </svg>
            Öffentlich
          </span>
        </div>
        <p
          class="mt-1 text-sm text-slate-600"
        >
          description 1
        </p>
      </div>
    </div>
    <div
      class="flex shrink-0 items-center gap-2"
      data-testid="actions"
    >
      <a
        class="inline-flex items-center justify-center whitespace-nowrap text-sm font-medium transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive bg-primary text-primary-foreground hover:bg-primary/90 h-8 rounded-md px-3 has-[>svg]:px-2.5 cursor-pointer gap-2"
        data-slot="button"
        data-testid="create-template-btn"
        href="/templates/new"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-plus h-4 w-4"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M5 12h14"
          />
          <path
            d="M12 5v14"
          />
        </svg>
        Neue Vorlage
      </a>
      <div
        data-slot="dropdown-menu"
        data-testid="more-options-btn"
      >
        <button
          class="inline-flex items-center justify-center gap-2 whitespace-nowrap rounded-md text-sm font-medium transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive border bg-background shadow-xs hover:bg-accent hover:text-accent-foreground dark:bg-input/30 dark:border-input dark:hover:bg-input/50 size-8 cursor-pointer"
          data-slot="dropdown-menu-trigger"
          data-testid="more-options-trigger-btn"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-ellipsis-vertical h-4 w-4"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <circle
              cx="12"
              cy="12"
              r="1"
            />
            <circle
              cx="12"
              cy="5"
              r="1"
            />
            <circle
              cx="12"
              cy="19"
              r="1"
            />
          </svg>
        </button>
        <div
          data-testid="mock-react-dropdown-menu-portal"
        />
      </div>
    </div>
  </div>
  <div
    data-slot="alert-dialog"
    data-testid="mock-react-alert-dialog-root"
  >
    <div
      data-slot="alert-dialog-portal"
      data-testid="mock-react-alert-dialog-portal"
    >
      <div
        class="data-[state=open]:animate-in data-[state=closed]:animate-out data-[state=closed]:fade-out-0 data-[state=open]:fade-in-0 fixed inset-0 z-50 bg-black/50"
        data-slot="alert-dialog-overlay"
        data-testid="mock-react-alert-dialog-overlay"
      />
    </div>
  </div>
</div>
`;
